Trying tool tipster fix - uncommented overflow: auto

--- a/ui/scss/project/_base.scss
+++ b/ui/scss/project/_base.scss
@@ -15,8 +15,8 @@ body {
 // https://github.com/iamceege/tooltipster/issues/140#issuecomment-52503725
 html,
 body {
-  // height: 100%;
-  // overflow: auto !important;
+  height: 100%;
+  overflow: auto !important;
 }
 
 body,
